@startuml
class Query {
+ str: query
+ [FactPattern]:fact_patterns
+ __str__() # "query_str ---> [str(fact_patterns)]"
+__init__(str: query) #convert query to fact patters
}

class FactPattern {
+ str: predicate
+ [Entity] subjects
+ [Entity] objects

}

class Entity {
+ ent_str
+ ent_id #as in tag entries
+ type
+ get_sub_ids()
}

class Predicate {
+ str: pred_str
+ get_obj_subheaders()
+ get_subj_subheaders()
}

Query *-- FactPattern
FactPattern *-- Entity
FactPattern *-- Predicate
@enduml
